Adding plausible script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,7 +59,7 @@
       "datePublished": "{{ page.date | date_to_xmlschema }}"{% endif %}
     }
   </script>
-
+  <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
   <link rel="icon" href="/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
   <link rel="stylesheet" href="/assets/css/style.css" />
