--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -63,7 +63,8 @@
     text-decoration: underline;
     text-decoration-thickness: 2px;
 
-    &:hover {
+    &:hover,
+    &:focus {
       color: $color-red;
     }
 
