--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -28,7 +28,8 @@
 
       display: block;
 
-      &:hover {
+      &:hover,
+      &:focus {
 
         .card__label h6 {
           background: $color-red;
