--- a/_sass/modules/_heading.scss
+++ b/_sass/modules/_heading.scss
@@ -83,9 +83,13 @@
         transition: background $transition, color $transition;
       }
 
-      &:hover span {
-        background: $color-grey-1;
-        color: $color-red;
+      &:hover,
+      &:focus {
+        span {
+          background: $color-grey-1;
+          color: $color-red;
+        }
+
       }
 
     }
