--- a/_sass/modules/_icon.scss
+++ b/_sass/modules/_icon.scss
@@ -17,8 +17,13 @@
     width: 15px;
   }
 
-  &:hover:after {
-    filter: $filter-black;
+  &:hover,
+  &:focus {
+
+    &:after {
+      filter: $filter-black;
+    }
+
   }
 
 
