--- a/_sass/modules/_post.scss
+++ b/_sass/modules/_post.scss
@@ -74,7 +74,8 @@
           color: $color-red;
           text-decoration: underline;
 
-          &:hover {
+          &:hover,
+          &:focus {
             color: $color-black;
           }
 
