--- a/_sass/modules/_blog.scss
+++ b/_sass/modules/_blog.scss
@@ -45,7 +45,8 @@
           color: $color-red;
           text-decoration: underline;
 
-          &:hover {
+          &:hover,
+          &:focus {
             color: $color-black;
           }
 
@@ -65,7 +66,8 @@
           color: $color-red;
           text-decoration: underline;
 
-          &:hover {
+          &:hover,
+          &:focus {
             color: $color-black;
           }
 
