--- a/_sass/modules/_trusted.scss
+++ b/_sass/modules/_trusted.scss
@@ -39,7 +39,8 @@
         width: auto;
       }
 
-      &:hover {
+      &:hover,
+      &:focus {
         background: $color-white;
         box-shadow: 0 0 0 3px $color-red;
         transform: translateY(-3px);
