Add banner on homepage linking to Rails World

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
 
 <body>
 {% include notification.html %}
+{% if page.id == 'home' %}
+  {% include banner.html %}
+{% endif %}
 {% include nav.html %}
 
 <div class="layout">
