--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,7 @@
 @import 'common/padding';
 @import 'common/shape';
 
+@import 'modules/banner';
 @import 'modules/blog';
 @import 'modules/cards';
 @import 'modules/core';
