--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,12 @@
   {% endif %}
 {% endif %}
 
-{% assign image = '/assets/images/opengraph.png' | absolute_url %}
+{% if page.og_image %}
+  {% assign image = page.og_image | absolute_url %}
+{% else %}
+  {% assign image = '/assets/images/opengraph.png' | absolute_url %}
+{% endif %}
+
 {% assign url = page.url  | absolute_url %}
 
 <head>
