--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <meta charset="utf-8" />
   <meta content="ie=edge" http-equiv="x-ua-compatible" />
   <meta name="handheldfriendly" content="true" />
-  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ description }}" />
 
   <meta property="og:site_name" content="{{ site.title }}" />
