--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <a class="nav__logo" href="/" aria-label="Ruby on Rails"></a>
 
   {% if page.id == 'home' %}
-    <input class="nav__checkbox" id="nav__checkbox" type="checkbox" role="button" />
+    <input class="nav__checkbox" id="nav__checkbox" type="checkbox" role="button" aria-label="menu" />
 
     <label class="nav__toggle" for="nav__checkbox">
       <span></span>
