add separate css bundle, title and description for world site

--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en" style="scroll-behavior: smooth">
-{% include head.html %}
+{% include world/head.html %}
 
 <body>
   <div class="layout">{{ content }}</div>
