--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -4,7 +4,7 @@
 {% include world/head.html %}
 
 <body>
-  <div class="layout">{{ content }}</div>
+  <main>{{ content }}</main>
 </body>
 
 </html>
