--- a/_sass/world/base/_colours.scss
+++ b/_sass/world/base/_colours.scss
@@ -4,6 +4,7 @@
   --purple-medium: #A386FF;
   --purple-dark: #3B1D62;
   --orange:  #D96242;
+  --orange-red: #F9553A;
   --pink-pale: #F8DBDB;;
   --white: #FFFFFF;
 
