--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -5,7 +5,9 @@
 
 @import 'base/reset';
 @import 'world/base/body';
+@import 'world/common/border';
 @import 'world/base/colours';
 @import 'world/base/metrics';
+@import 'world/modules/about';
 @import 'world/modules/button';
 @import 'world/modules/nav';
