--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -9,5 +9,6 @@
 @import 'world/base/colours';
 @import 'world/base/metrics';
 @import 'world/modules/about';
+@import 'world/modules/hero';
 @import 'world/modules/button';
 @import 'world/modules/nav';
