--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -39,7 +39,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@{{ site.twitter }}" />
   <meta name="twitter:image:alt" content="{{ site.world_title }}" />
-
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/components/carousel/carousel.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -58,5 +58,6 @@
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
   <link rel="icon" href="/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/themes/light.css" />
   <link rel="stylesheet" href="/assets/css/world.css" />
 </head>
