--- a/_sass/world/modules/_about.scss
+++ b/_sass/world/modules/_about.scss
@@ -1,9 +1,8 @@
 .about {
   padding: var(--space-small);
-  font-style: italic;
   line-height: 90%;
-  border-top: var(--border);
-  border-bottom: var(--border);
+  border-top: var(--border-white);
+  border-bottom: var(--border-white);
   text-align: center;
 
   p {
