--- a/_sass/world/modules/_nav.scss
+++ b/_sass/world/modules/_nav.scss
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: space-between;
   padding: var(--space-small) var(--space-xx-large);
-  border-top: var(--border);
-  border-bottom: var(--border);
+  border-top: var(--border-white);
+  border-bottom: var(--border-white);
   position: sticky;
   top: 0;
   z-index: 100;
@@ -18,6 +18,7 @@
     font-size: var(--type-xx-large);
     letter-spacing: -0.015em;
     font-weight: 800;
+    font-style: normal;
 
     &--outline {
       font-style: italic;
@@ -30,11 +31,9 @@
     display: flex;
     align-items: center;
     gap: var(--space-large);
-    font-style: italic;
   }
 
   &__link {
     font-size: var(--type-medium);
-    font-weight: 700;
   }
 }
