create sponsors section

--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -14,3 +14,4 @@
 @import 'world/modules/button';
 @import 'world/modules/nav';
 @import 'world/modules/speakers';
+@import 'world/modules/sponsors';
