create announcement banner

--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -2,6 +2,7 @@
 
 <html lang="en" style="scroll-behavior: smooth">
 {% include world/head.html %}
+{% include world/announcements.html %}
 
 <body>
   <main>{{ content }}</main>
