move header/navbar to partial

--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -3,7 +3,7 @@
 <html lang="en" style="scroll-behavior: smooth">
 {% include world/head.html %}
 {% include world/announcements.html %}
-
+{% include world/nav.html %}
 <body>
   <main>{{ content }}</main>
 </body>
