--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -12,6 +12,7 @@
 @import 'world/modules/announcements';
 @import 'world/modules/button';
 @import 'world/modules/callout';
+@import 'world/modules/footer';
 @import 'world/modules/hero';
 @import 'world/modules/nav';
 @import 'world/modules/speakers';
