create announcement banner and make navbar sticky

--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -2,8 +2,8 @@
 
 <html lang="en" style="scroll-behavior: smooth">
 {% include world/head.html %}
-
 <body>
+  {% include world/announcements.html %}
   <main>{{ content }}</main>
 </body>
 
