--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -71,4 +71,9 @@ body {
     padding-bottom: var(--space-x-small);
   }
 
+  header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
 }
