--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -10,9 +10,10 @@
 @import 'world/base/metrics';
 @import 'world/modules/about';
 @import 'world/modules/announcements';
-@import 'world/modules/callout';
-@import 'world/modules/hero';
 @import 'world/modules/button';
+@import 'world/modules/callout';
+@import 'world/modules/footer';
+@import 'world/modules/hero';
 @import 'world/modules/nav';
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
