install font and edit font variations

--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -59,5 +59,6 @@
   <link rel="icon" href="/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/themes/light.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/lar2lzk.css">
   <link rel="stylesheet" href="/assets/css/world.css" />
 </head>
