--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -1,9 +1,12 @@
+html {
+  font-family: "acumin-variable",sans-serif;
+  font-variation-settings: 'wght' 700, 'wdth' 100, 'slnt' -12;
+}
+
 body {
   background: var(--red);
   color: var(--text-color);
   box-sizing: border-box;
-  font-style: italic;
-  font-weight: 700;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -47,25 +50,24 @@ body {
 
   h1 {
     font-size: var(--type-xxx-large);
-    font-weight: 800;
+    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
     padding-bottom: var(--space-medium);
   }
 
   h2 {
     font-size: var(--type-xx-large);
-    font-weight: 800;
+    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
     padding-bottom: var(--space-small);
   }
 
   h3 {
     font-size: var(--type-x-large);
-    font-weight: 800;
+    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
     padding-bottom: var(--space-x-small);
   }
 
   h4 {
     font-size: var(--type-large);
-    font-weight: 800;
     padding-bottom: var(--space-x-small);
   }
 
@@ -83,5 +85,9 @@ body {
     position: sticky;
     top: 0;
     z-index: 100;
+  }
+
+  p {
+    line-height: 150%;
   }
 }
