--- a/_sass/world/modules/_hero.scss
+++ b/_sass/world/modules/_hero.scss
@@ -2,7 +2,6 @@
   text-align: center;
   padding-top: var(--space-xx-large);
   padding-bottom: var(--space-medium);
-  font-style: italic;
   background-color: transparent;
 
   &__content {
@@ -35,10 +34,10 @@
       display: flex;
       align-items: center;
       background-color: var(--purple-medium);
-      padding: var(--space-small) var(--space-x-small);
+      padding: var(--space-medium) var(--space-small);
       max-width: 136px;
       min-height: 60px;
-      font-weight: 800;
+      font-variation-settings: 'wght' 600, 'wdth' inherit, 'slnt' inherit;
       border-radius: 50%;
       position: absolute;
       top: 0;
