--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -14,6 +14,7 @@
 @import 'world/modules/callout';
 @import 'world/modules/footer';
 @import 'world/modules/hero';
+@import 'world/modules/faq';
 @import 'world/modules/nav';
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
