--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -16,5 +16,6 @@
 @import 'world/modules/hero';
 @import 'world/modules/faq';
 @import 'world/modules/nav';
+@import 'world/modules/speaker';
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
