--- a/_sass/world/modules/_speakers.scss
+++ b/_sass/world/modules/_speakers.scss
@@ -18,39 +18,64 @@
     background-image: url(/assets/world/previous.svg);
   }
 
-  sl-carousel::part(scroll-container) {
-    min-height: 15em;
-  }
-
   .carousel__card--narrow {
     width: 50%;
-
-    }
   }
 
-  speaker-card {
-    display: block;
-    background-color: var(--pink-pale);
+  &__index {
+    padding-left: var(--space-large);
+    padding-right: var(--space-large);
+  }
 
-    img {
-      margin: auto;
-      padding-bottom: var(--space-x-small)
-    }
+  &__gallery {
+    padding-top: var(--space-medium);
+    display: flex;
+    gap: var(--space-medium);
+    flex-wrap: wrap;
 
     h3 {
-      color: var(--red);
-      text-align: center;
+      font-size: var(--type-large);
     }
+  }
+}
 
-    p {
-      color: var(--purple-dark);
-      font-size: var(--type-xx-small);
-    }
+speaker-card {
+  display: block;
+  background-color: var(--pink-pale);
+  width: 11.5em;
+  height: 100%;
+  min-height: 14em;
+
+  bordered-container {
+    height: 100%;
+    display: flex;
+    box-sizing: border-box;
+  }
+
+  img {
+    border-radius: 50%;
+    margin: var(--space-small);
+    padding-bottom: var(--space-x-small);
+  }
+
+  h3 {
+    font-size: var(--type-medium);
+    color: var(--red);
+    text-align: center;
+  }
+
+  p {
+    color: var(--purple-dark);
+    font-size: var(--type-xx-small);
   }
 
   .speaker-card__content {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-top: var(--border-red);
     border-bottom: var(--border-red);
     padding: var(--space-small);
+    width: 100%;
   }
+}
