make homepage responsive

--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <bordered-container>
-    <p>This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a> and <a href="https://www.mshegow.com/">Mohamed Shegow</a>, junior developers from the Rails community.<br>
+    <p>This website was created by <a href="https://www.linkedin.com/in/shona-chan/">Shona Chan</a>, junior developer from the Rails community.<br>
     It was commissioned by the Rails Foundation, designed by <a href="https://katya-sitko.netlify.app/">Katya Sitko</a> and created under the mentorship of <a href="https://radioactivetoy.tech">Ayush Newatia</a>.</p>
     <ul>
       <li><a href="#">Code of Conduct</a></li>
