--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -1,11 +1,11 @@
 <header>
   <nav class="nav">
-    <a href="/world" class="nav__logo">RAILS<span class="nav__logo--outline">WORLD 2023</span></a>
+    <a href="/world" class="nav__logo"><img src="/assets/world/rails-world-logo.svg" alt="Rails World Logo"></a>
     <ul>
       <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
       <li><a href="#" class="nav__link">Agenda</a></li>
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
-      <li><a href="#" class="button button--dark button--small">Tickets</a></li>
+      <li><tito-button event="rails-world/rails-world-2023"></tito-button></li>
     </ul>
   </nav>
 </header>
