--- a/_sass/world/modules/_speakers.scss
+++ b/_sass/world/modules/_speakers.scss
@@ -4,6 +4,29 @@
   max-width: 50em;
   margin: auto;
 
+  sl-carousel::part(scroll-container) {
+    --slides-per-page: 4;
+    --slides-per-move: 4;
+
+    /* Extra small devices (phones, 680px and down) */
+    @media only screen and (max-width: 680px) {
+      --slides-per-page: 1;
+      --slides-per-move: 1;
+    }
+
+    /* Tablet devices (680px - 950px) */
+    @media only screen and (min-width: 680px) and (max-width: 950px) {
+      --slides-per-page: 2;
+      --slides-per-move: 2;
+    }
+
+    /* Larger devices (950px - 1200px) */
+    @media only screen and (min-width: 950px) and (max-width: 1200px) {
+      --slides-per-page: 3;
+      --slides-per-move: 3;
+    }
+  }
+
   sl-carousel::part(navigation-button) {
     color: transparent;
     background-repeat: no-repeat;
@@ -16,6 +39,29 @@
 
   sl-carousel::part(navigation-button--previous) {
     background-image: url(/assets/world/previous.svg);
+  }
+
+  sl-carousel::part(base) {
+    padding-bottom: var(--space-large);
+    --scroll-hint: 5%;
+    --aspect-ratio: 2/3;
+
+    /*  Extra small devices (phones, 400px and down) */
+    @media only screen and (max-width: 400px) {
+      --scroll-hint: 15%;
+    }
+
+    /*  Small devices (phones, 680px and down) */
+
+    @media only screen and (min-width: 400px) and (max-width: 680px) {
+      --scroll-hint: 20%;
+      --aspect-ratio: 1;
+    }
+
+    /* Tablet devices (680px - 950px) */
+    @media only screen and (min-width: 680px) and (max-width: 950px) {
+      --scroll-hint: 10%;
+    }
   }
 
   .carousel__card--narrow {
@@ -42,7 +88,6 @@
 speaker-card {
   display: block;
   background-color: var(--pink-pale);
-  width: 11.5em;
   height: 100%;
   min-height: 14em;
 
