Refactor nav bar CSS to reduce media queries

--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -1,6 +1,9 @@
 <header>
   <nav class="nav">
-    <a href="/world" class="nav__logo"><img src="/assets/world/rails-world-logo.svg" alt="Rails World Logo"></a>
+    <a href="/world" class="nav__logo">
+      <img src="/assets/world/rails-world-logo.png" alt="Rails World Logo">
+    </a>
+    <flex-spacer></flex-spacer>
     <ul>
       <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
       <li><a href="#" class="nav__link">Agenda</a></li>
