--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -5,8 +5,11 @@
     </a>
     <flex-spacer></flex-spacer>
     <ul>
-      <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
-      <li><a href="#" class="nav__link">Agenda</a></li>
+      {% if false %}
+        <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
+        <li><a href="#" class="nav__link">Agenda</a></li>
+      {% endif %}
+
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
       <li><tito-button event="rails-world/rails-world-2023"></tito-button></li>
     </ul>
