--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -4,18 +4,23 @@
 @charset 'utf-8';
 
 @import 'base/reset';
-@import 'world/base/body';
-@import 'world/common/border';
 @import 'world/base/colours';
 @import 'world/base/metrics';
+@import 'world/base/typography';
+@import 'world/base/body';
+
+@import 'world/common/border';
+@import 'world/common/containers';
+@import 'world/common/button';
+
 @import 'world/modules/about';
-@import 'world/modules/announcements';
-@import 'world/modules/button';
 @import 'world/modules/callout';
 @import 'world/modules/footer';
 @import 'world/modules/hero';
 @import 'world/modules/faq';
-@import 'world/modules/nav';
+@import 'world/modules/header';
 @import 'world/modules/speaker';
+@import 'world/modules/speaker_card';
+@import 'world/modules/speaker_carousel';
 @import 'world/modules/speakers';
 @import 'world/modules/sponsors';
