--- a/_sass/world/base/_body.scss
+++ b/_sass/world/base/_body.scss
@@ -10,150 +10,32 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-
-  main {
-    flex-grow: 1;
-    border-left: var(--border-white);
-    border-right: var(--border-white);
-    margin-left: var(--space-xx-large);
-    margin-right: var(--space-xx-large);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 1200px) {
-      border: none;
-      margin: 0;
-    }
-  }
-
-  a {
-    text-decoration: none;
-    color: var(--white);
-  }
-
-  content-container {
-    display: block;
-    max-width: 50em;
-    margin: var(--space-large) auto;
-
-    section {
-      padding-bottom: var(--space-xx-large);
-      padding-left: var(--space-medium);
-      padding-right: var(--space-medium);
-
-      /* Extra small devices (phones, 600px and down) */
-      @media only screen and (max-width: 600px) {
-        padding-bottom: var(--space-large);
-        padding-left: var(--space-small);
-        padding-right: var(--space-small);
-      }
-    }
-
-
-
-  }
-
-  content-container.large {
-    max-width: unset;
-  }
-
-  flex-container {
-    display: flex;
-  }
-
-  bordered-container {
-    display: block;
-    --border-color: var(--border-red);
-    --border-margin: var(--space-small);
-    --border-padding: var(--space-small);
-    border-left: var(--border-color);
-    border-right: var(--border-color);
-    margin: 0 var(--border-margin);
-    padding: var(--border-padding) 0;
-  }
-
-
-  h1 {
-    font-size: var(--type-xxx-large);
-    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-xx-large);
-    }
-  }
-
-  h2 {
-    font-size: var(--type-xx-large);
-    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
-    padding-bottom: var(--space-small);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-x-large);
-    }
-  }
-
-  h3 {
-    font-size: var(--type-x-large);
-    font-variation-settings: 'wght' 800, 'wdth' 100, 'slnt' -12;
-    padding-bottom: var(--space-x-small);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-large);
-    }
-  }
-
-  h4 {
-    font-size: var(--type-large);
-    padding-bottom: var(--space-x-small);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-medium);
-    }
-  }
-
-  h5 {
-    font-size: var(--type-medium);
-    padding-bottom: var(--space-x-small);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-    font-size: var(--type-small);
-    }
-  }
-
-  h6 {
-    font-size: var(--type-small);
-    padding-bottom: var(--space-x-small);
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-x-small);
-    }
-
-  }
-
-  header {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-  }
-
-  p {
-    line-height: 150%;
-
-    /* Extra small devices (phones, 600px and down) */
-    @media only screen and (max-width: 600px) {
-      font-size: var(--type-small);
-      font-variation-settings: 'wght' 400, 'wdth' 100, 'slnt' -12;
-    }
-
-  }
-
 }
 
 flex-spacer {
   flex-grow: 1;
+}
+
+main {
+  flex-grow: 1;
+  border-left: var(--border-white);
+  border-right: var(--border-white);
+  margin-left: var(--space-xx-large);
+  margin-right: var(--space-xx-large);
+
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 1200px) {
+    border: none;
+    margin: 0;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: var(--white);
+}
+
+/* Hide arrow glyph in Safari */
+summary::-webkit-details-marker {
+  display: none;
 }
